2010-10-21  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc-André Lureau

	* flumotion/component/consumers/httpstreamer/resources.py:
	Add the client only when we know that the fd is really opened

2010-10-21  Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/component/misc/httpserver/httpserver.xml:
	Put back the issuer-class property, and changed the doc to show deprecation.

2010-10-21  Marek Kowalski  <mkowalski@flumotion.com>

	* flumotion/component/producers/icecast/icecast.py:
	Fix typo (incorrect method called)

2010-10-19  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Julien Le Goff 

	* flumotion/component/effects/deinterlace/deinterlace.py:
	fix again colorspace renegotiations switching the deinterlacer

2010-10-08  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc-André Lureau 

	* flumotion/component/consumers/disker/disker.py:
	Use the time zone time to name the first disker file, as it's done for
	the following ones.
	Close #1465

2010-10-08  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	There is no wizard for the icy-streamer component. Remove wizard entry
	from the registry.

2010-10-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_component_video_converter.py:
	Fix video converter test. For the scalling tests do not use any deinterlacer

2010-10-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Julien Le Goff

	* flumotion/component/converters/video/video.py:
	Convert tuple to gst.Fraction

2010-10-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Julien Le Goff 
	* ChangeLog:
	* flumotion/component/effects/deinterlace/deinterlace.py:
	Reset the colorpsace converter after changing the deinterlacer
	for a proper re-negotiation

2010-10-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Julie Le Goff